<?xml version="1.0"?>
<package format="3">
  <name>sm_eigen</name>
  <version>0.0.1</version>
  <description>sm_eigen</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build Tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>sm_common</build_depend>
  <build_depend>sm_random</build_depend>

  <!-- Execution Dependencies -->
  <exec_depend>sm_common</exec_depend>
  <exec_depend>sm_random</exec_depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- Export Build Type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
