<?xml version="1.0"?>
<package format="3">
  <name>sm_property_tree</name>
  <version>0.0.1</version>
  <description>sm_property_tree</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build Tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>sm_common</build_depend>

  <!-- Execution Dependencies -->
  <exec_depend>sm_common</exec_depend>

  <!-- Export Build Type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
